feature: started development of 'internal resources accessing'